feat: complete HTTP server implementation
- Add HTTP request parsing, file serving, 404 handling, and CLI support
- Add proper MIME types, security features, and debug logging
- Add test files and comprehensive documentation
- Ready for assignment submission

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <ul>
         <li>✅ HTTP request parsing (extracts file path from GET requests)</li>
         <li>✅ Command-line port selection with -p flag</li>
-        <li>⏳ File serving (placeholder - needs work)</li>
-        <li>⏳ 404 error handling (needs work)</li>
+        <li>✅ File serving with proper MIME types</li>
+        <li>✅ 404 error handling for missing files</li>
+    </ul>
+    
+    <h2>Test Different File Types:</h2>
+    <ul>
+        <li><a href="test.txt">Plain Text File</a></li>
+        <li><a href="style.css">CSS File</a></li>
+        <li><a href="script.js">JavaScript File</a></li>
+        <li><a href="nonexistent.html">404 Test (Missing File)</a></li>
     </ul>
 </body>
 </html>
